--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 <body>
 <article class="deck">
 
-  <section>
+  <section class="slide1">
+    <img width="200" src="images/logomijia.png">
     <h1>mijiapresentation</h1>
   </section>
 
