Apa itu Mi Home?

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,23 @@
     <img src="images/bespoke-logo.jpg">
   </section>
 
+
+
+
+ <section class="slide2">
+        <h3>mi home adalah aplikasi untuk menjembatani konsep masa mendatang Xiaomi = ecosystem...
+ada banyak sekali Produk² yang bisa dikoneksikan dengan mi home..</h3>
+<p> 1. jalankan mi home </p>
+<p>2. Login dengan mi account </p>
+<p>3. add new device </p>
+<p>4. add manually </p>
+  </section>
+
+  <section>
+    <h2>Images</h2>
+    <img src="tampilanmihome1.png">
+  </section>
+
   <section>
     <h2>Keyboard Interaction</h2>
     <h3>Powered by <a href="https://github.com/bespokejs/bespoke-keys">bespoke-keys</a></h3>
