Apa itu Mi Home

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,13 @@
     <img src="images/bespoke-logo.jpg">
   </section>
 
+  <section class="slide2">
+    <h1>Apa itu Mijia Mi Home</h1>
+    <h3>Mi Home adalah aplikasi untuk menjembatani konsep masa mendatang Xiaomi = ecosystem.
+      Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.</h3>
+  </section>
+
+
   <section>
     <h2>Keyboard Interaction</h2>
     <h3>Powered by <a href="https://github.com/bespokejs/bespoke-keys">bespoke-keys</a></h3>
