--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,15 @@
 
   <section class="slide2">
     <h1>Apa itu Mijia Mi Home</h1>
-    <h3>Mi Home adalah aplikasi untuk menjembatani konsep masa mendatang Xiaomi = ecosystem.
-      Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.</h3>
+    <p> Mi Home adalah aplikasi untuk menjembatani konsep masa mendatang Xiaomi = ecosystem. 
+        Mi Home merupakan kelanjutan produk dan layanan ecosystem Xiaomi di Indonesia
+        Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.  </p>
+       <ul> <li>Buka Aplikasi Mi Home</li>
+        <li>Login dengan Mi Account</li>
+        <p>Maka Tampilannya akan seperti ini</p>
+       </ul>
+        <img src="images/contohtampilanawalmihome.png">
+        
   </section>
 
 
