--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,11 @@
     <img width="200" src="images/logomijia.png">
     <h1>mijiapresentation</h1>
   </section>
-
+  
   <section>
-    <h2>Images</h2>
-    <img src="images/bespoke-logo.jpg">
+    <h2>Semua Perangkat Dalam Satu Genggaman</h2>
+    <img width="100%" src="images/image1.jpg">
+    <!-- <img src="images/bespoke-logo.jpg"> -->
   </section>
 
   <section class="slide2">
