--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
         <img width="340" src="images/devicemihome1.png">
         <img width="340" src="images/devicemihome2.png">
        
+        <h1>Contoh perangkat Mi Home</h1>
         <p>Mi Smart Sensor dan Mi Home Security Camera Basic 1080p </p>
         <img width="300" src="images/Mi-Home-Security-Camera.jpg">
        <p>Mi Smart Sensor Set ini berfungsi dengan berbagai perangkat pintar dan menyediakan berbagai pengaturan dengan kontrol otomatis, seperti satu klik untuk memadamkan semua perangkat pintar atau menghidupkan lampu pintar ketika membuka pintu, semua dapat dengan mudah dikontrol melalui aplikasi Mi Home.</p>
