Penambahan gambar produk Mijia

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
 <article class="deck">
 
   <section>
-    <h1>mijiapresentation</h1>
+    <h1>米家 (Mijia)</h1>
   </section>
 
   <section>
-    <h2>Images</h2>
-    <img src="images/bespoke-logo.jpg">
+    <h2>Mijia CCTV</h2>
+    <img src="images/mijia-cctv.jpg">
   </section>
 
   <section>
