Update judul presentasi

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,38 @@
 <body>
 <article class="deck">
 
-  <section>
+  <section class="slide1">
+    <img width="200" src="images/logomijia.png">
     <h1>米家 (Mijia)</h1>
   </section>
-
+  
   <section>
-    <h2>Mijia CCTV</h2>
-    <img src="images/mijia-cctv.jpg">
+    <h2>Semua Perangkat Dalam Satu Genggaman</h2>
+    <img width="100%" src="images/image1.jpg">
+    <!-- <img src="images/bespoke-logo.jpg"> -->
   </section>
+
+  <section class="slide2">
+    <h1>Apa itu Mijia Mi Home?</h1>
+    <p> Mi Home adalah aplikasi untuk menjembatani konsep masa mendatang Xiaomi = ecosystem. 
+        Mi Home merupakan kelanjutan produk dan layanan ecosystem Xiaomi di Indonesia.
+        <p>Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.</p>   </p>
+       <ul> <li>Buka Aplikasi Mi Home</li>
+        <li>Login dengan Mi Account</li>
+        <p>Maka Tampilannya akan seperti ini</p>
+       </ul>
+        <img width="300" src="images/contohtampilanawalmihome.png">
+        <img width="300" src="images/contohtampilanawalmihome2.png">
+        <img width="340" src="images/devicemihome1.png">
+        <img width="340" src="images/devicemihome2.png">
+       
+        <h1>Contoh perangkat Mi Home</h1>
+        <p>Mi Smart Sensor dan Mi Home Security Camera Basic 1080p </p>
+        <img width="300" src="images/Mi-Home-Security-Camera.jpg">
+       <p>Mi Smart Sensor Set ini berfungsi dengan berbagai perangkat pintar dan menyediakan berbagai pengaturan dengan kontrol otomatis, seperti satu klik untuk memadamkan semua perangkat pintar atau menghidupkan lampu pintar ketika membuka pintu, semua dapat dengan mudah dikontrol melalui aplikasi Mi Home.</p>
+        
+  </section>
+
 
   <section>
     <h2>Keyboard Interaction</h2>
