--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
   <section class="slide2">
     <h1>Apa itu Mijia Mi Home?</h1>
-    <p> . Mi Home ini yaitu aplikasi resmi dari Xiaomi untuk memudahkan Anda mengelola produk Xiaomi dengan cara termudah dan ternyaman. Anda dapat mengonfigurasi atau memprogram lampu, penyedot debu, smartwatch, jam alarm, kipas angin, kamera keamanan dan sebagainya. Xiaomi menawarkan banyak sekali produk untuk Anda.
+    <p> Mi Home ini yaitu aplikasi resmi dari Xiaomi untuk memudahkan Anda mengelola produk Xiaomi dengan cara termudah dan ternyaman. Anda dapat mengonfigurasi atau memprogram lampu, penyedot debu, smartwatch, jam alarm, kipas angin, kamera keamanan dan sebagainya. Xiaomi menawarkan banyak sekali produk untuk Anda.
 
 
         <p>Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.</p>   </p>
