tambahan mi smart sensor

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <h1>Contoh perangkat Mi Home</h1>
         <p>Mi Smart Sensor dan Mi Home Security Camera Basic 1080p </p>
         <img width="300" src="images/Mi-Home-Security-Camera.jpg">
-       <p>Mi Smart Sensor Set ini berfungsi dengan berbagai perangkat pintar dan menyediakan berbagai pengaturan dengan kontrol otomatis, seperti satu klik untuk memadamkan semua perangkat pintar atau menghidupkan lampu pintar ketika membuka pintu, semua dapat dengan mudah dikontrol melalui aplikasi Mi Home.</p>
+       <p>Mi Smart Sensor Set ini berfungsi dengan berbagai perangkat pintar dan menyediakan berbagai pengaturan dengan kontrol otomatis, seperti satu klik untuk memadamkan semua perangkat pintar atau menghidupkan lampu pintar ketika membuka pintu, semua dapat dengan mudah dikontrol melalui aplikasi Mi Home. Mi Home Security Camera Basic merupakan perangkat pintar yang dapat mendeteksi pergerakan dan menghasilkan gambar yang jelas. Kamera keamanan dengan resolusi 1080p FHD, memiliki jangkauan lebih luas 130 derajat sudut lensa ultra lebar yang dapat melindungi segala aspek rumah, juga dapat berkomunikasi suara dua arah, mendeteksi setiap gerakan pada malam hari dengan inframerah hingga jarak 10 meter, dan terhubung dengan aplikasi Mi Home yang membuat penggunanya dapat dengan mudah mengakses dan memonitor keadaan rumah. Mendukung memori tambahan hingga 64GB yang dapat merekam setiap gerakan hingga 7 hari, mendukung wifi 2,4GHz dan 5GHz yang disesuaikan dengan router Anda.</p>
         
   </section>
 
