tambahan fungsi kamera

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,9 @@
             <li><span>Konektivitas :</span> Wi-Fi IEEE 802.11 b/g/n 2.4 GHz </li>
             <li><span>Penyimpanan :</span> kartu MicroSD (mendukung 16GB - 64GB, kartu penyimpanan Class 10 dan di atasnya) </li>
             <li><span>Perangkat yang didukung :</span> Android 4.4 ke atas atau IOS 9.0 ke atas</li>
+            
+            <p>Dilengkapi dengan Night Vision, pendeteksi gerakan, bicara 2 arah secara realtime. </p>
+           
           </ul>
         </div>
       </div>
