Tambah konten pada slide 4

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,14 @@
 
 
  <section class="slide2">
-      
+      <h1>Spesifikasi dan Harga Mi Home Security Camera</h1>
+
+      <span>1080p FHD | 360° Vision | Infrared Night Vision | Deteksi gerak AI & Deteksi manusia
+        Panggilan 2 arah | Pilihan pemasangan yang beragam</span>
+
+        <span class="price">
+          Rp. 599,000
+        </span>
   </section>
 
 
