Styling Tile & Price

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
   <article class="deck">
 
     <section class="slide1">
-      <img width="200" src="images/logomijia.png">
+      <img width="400" src="images/logomijia.png">
       <h1>米家 (Mijia)</h1>
     </section>
 
     <section>
-      <h2>Semua Perangkat Dalam Satu Genggaman</h2>
-      <img width="100%" src="images/image1.jpg">
+      <h1>Semua Perangkat Dalam Satu Genggaman</h1>
+      <img src="images/image1.jpg">
       <!-- <img src="images/bespoke-logo.jpg"> -->
     </section>
 
@@ -60,13 +60,28 @@
 
 
     <section class="slide2">
-      <h1>Spesifikasi dan Harga Mi Home Security Camera</h1>
-      <img width="400" src="images/xiaofang1.jpg">
-      
+      <h1 class="title" style="text-align: left; display: block">Spesifikasi dan Harga Mi Home Security Camera</h1>
+      <p>Mi Home Security Camera 360° 1080P</p>
+      <div style="display: flex; justify-content: center;">
 
-      <span>1080p FHD | 360° Vision | Infrared Night Vision | Deteksi gerak AI & Deteksi manusia
-        Panggilan 2 arah | Pilihan pemasangan yang beragam</span>
+        <img width="700" src="images/xiaofang1.jpg" style="display: inline-block;">
+        <div style="display: inline-block; padding-top: 20px;">
+          <br>
+          <br>
+          <br>
+          <b style="font-size: 22pt; color: grey;">Spesifikasi:</b>
+          <ul class="build build-items" style="color: grey; font-size: 15pt; ">
+            <li>1080p FHD</li>
+            <li>360° Vision</li>
+            <li>Infrared Night Vision</li>
+            <li>Deteksi gerak AI & Deteksi manusia Panggilan 2 arah</li>
+            <li>Pilihan pemasangan yang beragam</li>
+          </ul>
+        </div>
+      </div>
 
+      <br>
+      <p style="color: grey; font-size: 15pt; text-align: center; margin-bottom: 0;">Harga yang ditawarkan</p>
       <span class="price">
         Rp. 599,000
       </span>
