Update slide dan page styling

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 
 
     <section class="slide2">
-      <h1 class="title" style="text-align: left; display: block">Spesifikasi dan Harga Mi Home Security Camera</h1>
+      <h1 class="title" style="text-align: left; display: block">Spesifikasi, Dimensi, dan Harga Mi Home Security Camera</h1>
       <p>Mi Home Security Camera 360° 1080P</p>
       <div style="display: flex; justify-content: center;">
 
@@ -79,23 +79,42 @@
           </ul>
         </div>
       </div>
+    </section>
 
+
+    <section>
+      <h1 class="title" style="text-align: left; display: block">Spesifikasi, Dimensi, dan Harga Mi Home Security Camera</h1>
       <br>
-      <p style="color: grey; font-size: 15pt; text-align: center; margin-bottom: 0;">Harga yang ditawarkan</p>
-      <span class="price">
+      <div style="display: flex; justify-content: center;">
+
+        <img width="500" src="images/dimension.jpeg" style="display: inline-block;">
+        <div style="display: inline-block; padding-top: 20px;">
+          <br>
+          <br>
+          <br>
+          <b style="font-size: 22pt; color: grey;">Dimensi dan spesifikasi:</b>
+          <br>
+          <ul class="build build-items" style="color: grey; font-size: 15pt; ">
+            <li><span>Dimensi Produk :</span> 78 x 78 x 118mm</li>
+            <li><span>Berat Produk :</span> 239 gram </li>
+            <li><span>Daya input :</span> 5V -=- 1A </li>
+            <li><span>Sudut kamera :</span> 110°</li>
+            <li><span>Resolusi :</span> 1080p </li>
+            <li><span>Panjang fokus :</span> 3,9mm </li>
+            <li><span>Suhu pengoperasian :</span> -10℃ ~ 50℃</li>
+            <li><span>Konektivitas :</span> Wi-Fi IEEE 802.11 b/g/n 2.4 GHz </li>
+            <li><span>Penyimpanan :</span> kartu MicroSD (mendukung 16GB - 64GB, kartu penyimpanan Class 10 dan di atasnya) </li>
+            <li><span>Perangkat yang didukung :</span> Android 4.4 ke atas atau IOS 9.0 ke atas</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h1 class="title" style="text-align: left; display: block">Harga yang ditawarkan</h1>
+      <span class="tag">
         Rp. 599,000
       </span>
-    </section>
-
-
-    <section>
-      <h2>Keyboard Interaction</h2>
-      <h3>Powered by <a href="https://github.com/bespokejs/bespoke-keys">bespoke-keys</a></h3>
-    </section>
-
-    <section>
-      <h2>Touch Interaction</h2>
-      <h3>Powered by <a href="https://github.com/bespokejs/bespoke-touch">bespoke-touch</a></h3>
     </section>
 
     <section>
