tambahan fungsi-fungsi

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
             <li><span>Perangkat yang didukung :</span> Android 4.4 ke atas atau IOS 9.0 ke atas</li>
             
             <p>Dilengkapi dengan Night Vision, pendeteksi gerakan, bicara 2 arah secara realtime. </p>
-           
+            <p>Sehingga anda bisa mengawasi rumah secara aktual.</p>
           </ul>
         </div>
       </div>
