--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,12 @@
       <p> Mi Home ini yaitu aplikasi resmi dari Xiaomi untuk memudahkan Anda mengelola produk Xiaomi dengan cara
         termudah dan ternyaman. Anda dapat mengonfigurasi atau memprogram lampu, penyedot debu, smartwatch, jam alarm,
         kipas angin, kamera keamanan dan sebagainya. Xiaomi menawarkan banyak sekali produk untuk Anda.
+        <img src="images/gambar_install_mi_home.jpg">
 
 
         <p>Ada banyak sekali produk² yang bisa dikoneksikan dengan mi home.</p>
       </p>
+
       <ul>
         <li>Buka Aplikasi Mi Home</li>
         <li>Login dengan Mi Account</li>
