penambahan kekurangan gambar

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,9 @@
         <li>Login dengan Mi Account</li>
         <p>Maka Tampilannya akan seperti ini</p>
       </ul>
-      <img width="300" src="images/contohtampilanawalmihome.png">
+      <section><img width="300" src="images/perangkat_1.png">
+      </section>
+      
       
       <h1>Contoh perangkat Mi Home</h1>
       <p>Mi Smart Sensor dan Mi Home Security Camera Basic 1080p </p>
