--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
       </ul>
       <section><img width="300" src="images/perangkat_1.png">
       </section>
-      
+      <section><img width="300" src="images/perangkat_2.png">
+      </section>
       
       <h1>Contoh perangkat Mi Home</h1>
       <p>Mi Smart Sensor dan Mi Home Security Camera Basic 1080p </p>
